# llm-quantization-study

./: .gitignore  LICENSE  README.md  analyze.py  ollama_client.py  one_pager.md  provenance.py  pyproject.toml  requirements.txt  run_eval.py  scoring.py  tasks.py
.github/workflows/: test.yml
results/: experiment_manifest.json  extraction_fp16.jsonl  extraction_q4_K_M.jsonl  extraction_q8_0.jsonl  mmlu_fp16.jsonl  mmlu_q4_K_M.jsonl  mmlu_q8_0.jsonl  summary.json  summary.txt
scripts/: check_results.py
tests/: test_scoring.py  test_tasks.py
